<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocalDo</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>
    <string name="action_accept">Accept</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_edit">Edit</string>
    <string name="action_discard">Delete</string>
    <string name="action_sortBy">Sort by distance</string>
    <string name="action_manageLocations">Manage Locations</string>
    <string name="action_options">Options</string>
    <string name="active_tasks_title">2 tasks to do</string>
    <string name="finished_tasks_title">2 tasks finished</string>
    <string name="title_activity_set_task">New Task</string>
    <string name="title_activity_set_location">Set Location</string>
    <string name="title_activity_set_alert">Set alert</string>
    <string name="title_activity_main">All Tasks</string>
    <string name="title_activity_manage_locations">Manage Locations</string>
    <string name="manage_locations_title">Your locations</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="unknown_activity_request_code">Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="deadline_alarm_title">It\'s time</string>
    <string name="add_geofences_result_success">Add Geofences: Success GeofenceRequestIds=%1$s</string>
    <string name="add_geofences_result_failure">Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="add_geofences_already_requested_error">
        Can\'t add geofences, previous request hasn\'t finished.
    </string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
     <string name="remove_geofences_id_failure">
        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="remove_geofences_already_requested_error">
        Can\'t remove geofences, previous request hasn\'t finished.
    </string>
    <string name="remove_geofences_id_success">
        Removing geofences by request ids succeeded: request ids: %1$s
    </string>
    <string name="remove_geofences_intent_failure">
        Removing all geofences failed: error code %1$d
    </string>
    <string name="remove_geofences_intent_success">
        Removing all geofences succeeded.
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_error_detail">
        Geofence transition error, code %1$d message %2$s.
    </string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error. Invalid type %1$d in geofences %2$s
    </string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="geofence_transition_notification_title">
        %1$s geofence(s) %2$s
    </string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="setTask_task_title">Title of task</string>
    <string name="setTask_deadline">Select deadline</string>
    <string name="setTask_deadlineTime">Time</string>
    <string name="setTask_alert">Set alert</string>
    <string name="setTask_location">Add location</string>
    <string name="setTask_color">Choose color</string>
    <string name="setTask_notes">Notes...</string>
    <string name="location_name">Name</string>
    <string name="location_address">Address</string>    
    <string name="setAlert_remind_when">Remind me when...</string>
    <string name="setAlert_remind_by">Remind me by...</string>
    <string name="setAlert_distanceToLoaction">Distance to location:</string>
    <string name="setAlert_timeToDeadline">Time to deadline</string>
    <string name="infowindow_info2">Touch to change radius</string>
    <string name="infowindow_dialog">Change</string>    
    <string name="checkbox_alertTime">Deadline alert:</string>
    <string name="checkbox_alertLocation">Location alert:</string>
    <string name="setLocation_cb_addLocationToList">Add to location list</string>
    <string name="setLocation_cb_setAlert">Remind me when</string>
    <string name="setLocation_distanceToLocation">Distance to location:</string>
    <string name="setTask_location_spinner_prompt">Choose location</string>
    <string-array name="setTask_locations_array">
		<item>Library</item>   
        <item>University</item>
        <item>Home</item>
        <item>New Location</item>        
    </string-array>
    
    <!-- IF CHANGES ARE MADE HERE DONT FORGET TO CHANGE THE LOOKUP ARRAYS IN CONSTANTS.JAVA -->
    
    <string name="setTask_colors_spinner_prompt">Choose color</string>
    <string-array name="setTask_colors_array">
		<item>No color</item>   
        <item>Red</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Blue</item>
    </string-array>
    <string name="setAlert_distances_spinner_prompt">Choose distance</string>
    <string-array name="setAlert_distances_array">
        <item>20 m</item>
        <item>50 m</item>
        <item>100 m</item>
    </string-array>
    <string name="setAlert_deadlineTimes_spinner_prompt">Choose distance</string>
    <string-array name="setAlert_deadlineTimes_array">
        <item>5 min</item>
        <item>10 min</item>
        <item>30 min</item>
        <item>1 h</item>
        <item>4 h</item>
        <item>12 h</item>
        <item>1 day</item>
        <item>2 days</item>
        <item>7 days</item>
    </string-array>
	<string name="setAlert_sound">Sound</string>
	<string name="setAlert_vibration">Vibration</string>
	<string name="setAlert_pushNotification">Push Notification</string>
	
</resources>
