<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item 
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_new"
        android:showAsAction="always"/>
        
    <item
        android:id="@+id/action_sortBy"
        android:orderInCategory="1"
        android:showAsAction="never"        
        android:title="@string/action_sortBy"/>
    <item
        android:id="@+id/action_manageLocations"
        android:orderInCategory="2"
        android:showAsAction="never"        
        android:title="@string/action_manageLocations"/>
    <item
        android:id="@+id/action_options"
        android:orderInCategory="3"
        android:showAsAction="never"        
        android:title="@string/action_options"/> 
    <!--     
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:showAsAction="never"        
        android:title="@string/action_settings"/>
     -->

</menu>
