<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SetTaskActivity"
    android:orientation="vertical"
    android:background="@color/background_grey" >

    <EditText 
        android:id="@+id/setTask_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setTask_task_title" />
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="@color/background_grey"
        android:orientation="horizontal">
        
     	<EditText 
	        android:id="@+id/setTask_deadlineDate"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/setTask_deadline"
	        android:onClick="showDatePickerDialog"
	        android:focusableInTouchMode="false" />
	     
	     <EditText 
	        android:id="@+id/setTask_deadlineTime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/setTask_deadlineTime"
	        android:onClick="showTimePickerDialog"
	        android:visibility="gone"
	        android:focusableInTouchMode="false"/>
     </LinearLayout>
     
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="@color/background_grey"
        android:orientation="horizontal">
	    
        <CheckBox
	        android:id="@+id/setTask_checkbox_alertTime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_alertTime"
	        android:visibility="gone" />
	     
	     <Spinner
            android:id="@+id/setTask_spinner_alertTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/setAlert_deadlineTimes_array"
            android:prompt="@string/setAlert_deadlineTimes_spinner_prompt"
            android:visibility="gone"
             />
	 </LinearLayout>
	     
     <LinearLayout
         android:id="@+id/locations_linearlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">	     
     </LinearLayout>
     
     <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="@color/background_grey"
        android:orientation="horizontal">
	    
        <CheckBox
	        android:id="@+id/setTask_checkbox_alertLocation"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_alertLocation"
	        android:visibility="gone" />
	     
	     <Spinner
            android:id="@+id/setTask_spinner_alertLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/setAlert_distances_array"
            android:prompt="@string/setAlert_distances_spinner_prompt"
            android:visibility="gone"
             />
	 </LinearLayout>
	 
     <EditText 
        android:id="@+id/setTask_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setTask_color"
        android:onClick="showColorDialog"
        android:focusableInTouchMode="false" />
     
     <Spinner
        android:id="@+id/setTask_color_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:entries="@array/setTask_colors_array"
        android:prompt="@string/setTask_colors_spinner_prompt"
        android:visibility="gone"
        android:spinnerMode="dialog"/>
     
     <Spinner
        android:id="@+id/setTask_location_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:entries="@array/setTask_locations_array"
        android:prompt="@string/setTask_location_spinner_prompt"
        android:visibility="gone"
        android:spinnerMode="dialog"/>
     
     <EditText 
        android:id="@+id/setTask_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setTask_notes"
        android:lines="6"
        android:gravity="top|left"
        android:background="#ffffff"/>

</LinearLayout>
