<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SetAlertActivity"
    android:background="@color/background_grey"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setAlert_remind_when" />
    
    <View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="#000000" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2" >

        <CheckBox
            android:id="@+id/setAlert_distance_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/setAlert_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setAlert_distanceToLoaction" />

        <Spinner
            android:id="@+id/setAlert_distance_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/setAlert_distances_array"
            android:prompt="@string/setAlert_distance_spinner_prompt" />

        <CheckBox
            android:id="@+id/setAlert_deadline_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/setAlert_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setAlert_timeToDeadline" />

        <Spinner
            android:id="@+id/setAlert_deadline_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/setAlert_deadlineTimes_array"
            android:prompt="@string/setAlert_deadlineTime_spinner_prompt" />
    </GridLayout>
    
    <TextView
        android:id="@+id/setAlert_remind_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setAlert_remind_by"
        android:layout_marginTop="15dp" />
    
    <View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="#000000" />
    
    <GridLayout 
       android:rowCount="3"
       android:columnCount="2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       
       <CheckBox 
           android:id="@+id/setAlert_sound_checkbox"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
       
       <TextView 
           android:id="@+id/setAlert_sound"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/setAlert_sound"/>
       
       <CheckBox 
           android:id="@+id/setAlert_vibration_checkbox"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
       
       <TextView 
           android:id="@+id/setAlert_vibration"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/setAlert_vibration"/>
       
       <CheckBox 
           android:id="@+id/setAlert_pushNotification_checkbox"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
       
       <TextView 
           android:id="@+id/setAlert_pushNotification"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/setAlert_pushNotification"/>
    </GridLayout>
    
    <Button
        android:id="@+id/setAlert_notification_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createNotification"
        android:text="Create Notification" />

    <EditText 
        android:id="@+id/setAlert_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="hh:mm"
        android:onClick="showTimePickerDialog"/>
    
    <EditText 
        android:id="@+id/setAlert_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="dd:mm:yyyy"
        android:onClick="showDatePickerDialog"/>
   
</LinearLayout>
