<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SetLocationActivity"
    android:orientation="vertical"
    android:background="@color/background_grey" >
  
	<EditText 
	    android:id="@+id/location_name" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/location_name" />
	
	<EditText 
	    android:id="@+id/location_address" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/location_address"
	    android:clickable="false"
	    android:focusable="false" />
	
	
    <CheckBox 
        android:id="@+id/setLocation_cb_addLocationToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setLocation_cb_addLocationToList" 
        android:checked="true" />     
	
	
	
	<fragment 
	  android:id="@+id/map"
	  android:name="com.google.android.gms.maps.MapFragment"
	  android:layout_width="match_parent"
	  android:layout_height="0dp"
	  android:layout_weight="1" />
	<!-- 
	<CheckBox 
        android:id="@+id/setLocation_cb_setAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setLocation_cb_setAlert"/>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
		<TextView 
		    android:id="@+id/setLocation_distanceToLocation"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:text="@string/setLocation_distanceToLocation"
		    android:layout_weight="1"/>
		<Spinner
            android:id="@+id/setLocation_spinner_distances"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/setAlert_distances_array"
            android:prompt="@string/setAlert_distances_spinner_prompt"  
             />
	</LinearLayout>
	 -->
    
</LinearLayout>
